--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.24.0",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.3",
+    "firebaseui": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-jss": "^10.9.0",
     "react-scripts": "5.0.0",
     "uuid": "^8.3.2",
