--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
